<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/btn_delete"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/etxt_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_date"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/etxt_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_in"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/etxt_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_out"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/etxt_oper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_oper"
            android:textSize="14sp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginRight="-2dp"
        android:src="@android:drawable/ic_menu_delete" />

</RelativeLayout>